--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: sparkfun_pro_micro_rp2040
     shield: corne_left
-  - board: nice_nano_v2
+  - board: sparkfun_pro_micro_rp2040
     shield: corne_right
