Enable battery status widget in corne configuration

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,4 +18,5 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=60
 
 # Enable the OLED display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
