--- a/build.yaml
+++ b/build.yaml
@@ -17,9 +17,14 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
+CONFIG_ZMK_SPLIT=y
+compatible = "zmk,wired-split";
+CONFIG_ZMK_BLE=y
+
 ---
 include:
   - board: sparkfun_pro_micro_rp2040
     shield: corne_left
+    
   - board: sparkfun_pro_micro_rp2040
     shield: corne_right
