Fix syntax for CONFIG_ZMK_SPLIT and CONFIG_ZMK_BLE
Updated CONFIG_ZMK_SPLIT and CONFIG_ZMK_BLE syntax in build.yaml.

--- a/build.yaml
+++ b/build.yaml
@@ -17,14 +17,13 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
-CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT=y;
 compatible = "zmk,wired-split";
-CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE=y;
 
 ---
 include:
   - board: sparkfun_pro_micro_rp2040
     shield: corne_left
-    
   - board: sparkfun_pro_micro_rp2040
     shield: corne_right
