--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@
 #     artifact-name: corne_left_with_studio
 #
 CONFIG_ZMK_SPLIT=y;
-compatible = "zmk,wired-split";
+#compatible = "zmk,wired-split";
 CONFIG_ZMK_BLE=y;
 
 ---
