--- a/build.yaml
+++ b/build.yaml
@@ -17,7 +17,7 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
-CONFIG_ZMK_SPLIT=y;
+CONFIG_ZMK_SPLIT=y
 #compatible = "zmk,wired-split";
 CONFIG_ZMK_BLE=y;
 
