--- a/build.yaml
+++ b/build.yaml
@@ -25,5 +25,7 @@ CONFIG_ZMK_BLE=y;
 include:
   - board: sparkfun_pro_micro_rp2040
     shield: corne_left
+    CONFIG_ZMK_SPLIT=y
   - board: sparkfun_pro_micro_rp2040
     shield: corne_right
+    CONFIG_ZMK_SPLIT=y
