Enable split keyboard and BLE in corne.conf

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,7 +4,9 @@
 # Copyright (c) 2024 Thiago Alves
 # SPDX-License-Identifier: MIT
 
+CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_KEYBOARD_NAME="Corne OLED v3"
+CONFIG_ZMK_BLE=y
 
 # Change the next lines values to 'y' to enable the Corne RGB Underglow
 #CONFIG_ZMK_RGB_UNDERGLOW=y
