--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,7 +6,7 @@
 
 #CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_KEYBOARD_NAME="Corne OLED v3"
-CONFIG_ZMK_BLE=y
+#CONFIG_ZMK_BLE=y
 
 
 # Change the next lines values to 'y' to enable the Corne RGB Underglow
